--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button class="start-button" onclick="startPressed()">Press to start</button>
     </div>
     <div class="right-section">
-      <img src="7cdf54e6-d0ce-451d-9761-93fd29edcbf2.png" alt="Glass of water">
+      <img src="https://www.pngitem.com/pimgs/m/604-6042239_glass-of-water-png-transparent-png.png" alt="Glass of water">
     </div>
   </div>
   <script src="script.js"></script>
