--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       </h1>
       <div class="drop-icon"></div>
       <button class="start-button" onclick="startPressed()">Press to start</button>
+      <button class="info-button" onclick="infos()">A propos</button>
     </div>
+    
     <div class="right-section">
       <img src="https://www.pngitem.com/pimgs/m/604-6042239_glass-of-water-png-transparent-png.png" alt="Glass of water">
     </div>
